--- a/slime.html
+++ b/slime.html
@@ -119,7 +119,7 @@
         #grid {
             width: 100%;
             border-collapse: separate;
-            border-spacing: 6px;
+            border-spacing: 4px;
             margin: 20px auto;
             table-layout: fixed;
         }
@@ -129,14 +129,14 @@
             width: 100%;
             height: 68px;
             background: #f8fafc;
-            border-radius: 14px;
+            border-radius: 4px;
             text-align: center;
             vertical-align: middle;
             font-size: 28px;
             font-weight: bold;
             cursor: pointer;
             transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            box-shadow: 4px 4px 12px rgba(255,0,0,2);
         }
         @media (max-width: 480px) {
             #grid td { height: 56px; font-size: 24px; }
