--- a/slime.html
+++ b/slime.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Slime Merge Simulator by Killer076</title>
+    <title>[killer076] Slime Simulator</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One:wght@400&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -247,7 +247,7 @@
 </head>
 <body>
     <div id="game-container">
-        <h1>Slime Simulator from Killer076</h1>
+        <h1>[killer076] Slime Simulator</h1>
 
         <div class="controls">
             <div class="theme-selector">
